test/error/name_shadowing.colgm
func test_param(a: i32, b: i64, c: const i8*) {
    var a = 1;
    var b = 2;
    var c = nil;
}

func test_local() {
    var a: i32 = 0;
    var b: i64 = 0;
    var c: const i8* = nil;
    if (1 == 1) {
        var a = 0.0;
        var b = 1;
        var c = nil;
    }
}