test/error/name_shadowing.result
Error: redefinition of variable "a"
  --> test/error/name_shadowing.colgm:2:5
  | 
2 |     var a = 1;
  |     ^^^^^^^^^
  --> test/error/name_shadowing.colgm:1:17
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                 ^^^^^^
 note: shadows previous definition here

Error: redefinition of variable "b"
  --> test/error/name_shadowing.colgm:3:5
  | 
3 |     var b = 2;
  |     ^^^^^^^^^
  --> test/error/name_shadowing.colgm:1:25
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                         ^^^^^^
 note: shadows previous definition here

Error: redefinition of variable "c"
  --> test/error/name_shadowing.colgm:4:5
  | 
4 |     var c = nil;
  |     ^^^^^^^^^^^
  --> test/error/name_shadowing.colgm:1:33
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                                 ^^^^^^^^^^^^
 note: shadows previous definition here

Warning: unused variable "a"
  --> test/error/name_shadowing.colgm:1:17
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                 ^^^^^^

Warning: unused variable "c"
  --> test/error/name_shadowing.colgm:1:33
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                                 ^^^^^^^^^^^^

Warning: unused variable "b"
  --> test/error/name_shadowing.colgm:1:25
  | 
1 | func test_param(a: i32, b: i64, c: const i8*) {
  |                         ^^^^^^

Error: redefinition of variable "a"
  --> test/error/name_shadowing.colgm:12:9
   | 
12 |         var a = 0.0;
   |         ^^^^^^^^^^^
  --> test/error/name_shadowing.colgm:8:5
  | 
8 |     var a: i32 = 0;
  |     ^^^^^^^^^^^^^^
 note: shadows previous definition here

Error: redefinition of variable "b"
  --> test/error/name_shadowing.colgm:13:9
   | 
13 |         var b = 1;
   |         ^^^^^^^^^
  --> test/error/name_shadowing.colgm:9:5
  | 
9 |     var b: i64 = 0;
  |     ^^^^^^^^^^^^^^
 note: shadows previous definition here

Error: redefinition of variable "c"
  --> test/error/name_shadowing.colgm:14:9
   | 
14 |         var c = nil;
   |         ^^^^^^^^^^^
  --> test/error/name_shadowing.colgm:10:5
   | 
10 |     var c: const i8* = nil;
   |     ^^^^^^^^^^^^^^^^^^^^^^
  note: shadows previous definition here

Warning: unused variable "a"
  --> test/error/name_shadowing.colgm:8:5
  | 
8 |     var a: i32 = 0;
  |     ^^^^^^^^^^^^^^

Warning: unused variable "c"
  --> test/error/name_shadowing.colgm:10:5
   | 
10 |     var c: const i8* = nil;
   |     ^^^^^^^^^^^^^^^^^^^^^^

Warning: unused variable "b"
  --> test/error/name_shadowing.colgm:9:5
  | 
9 |     var b: i64 = 0;
  |     ^^^^^^^^^^^^^^